--- a/README.org
+++ b/README.org
@@ -15,7 +15,7 @@ One project is created for src/, and another one for tests/
   sudo pip install --upgrade conan
   conan user
   cd ./conan
-  conan install . --build missing --pr linux.txt
+  conan install . --build missing
   cd ..
   #rename the folder here if you want the project to have another name
   ./tools/premake5 gmake
